# HybridRAG

./: .env.example  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/: chat.py  ingest.py  retrieve.py
app/config/: settings.py
app/core/: logging.py
app/db/: models.py  session.py
app/graph/: nodes.py  state.py  workflow.py
app/repositories/: chunk_repository.py  document_repository.py
app/services/: bm25_service.py  crag_service.py  dense_retriever.py  embedding_service.py  hybrid_retrieval_service.py  hyde_service.py  ingestion_service.py  llm_service.py  loader_service.py  reranker_service.py  retrieval_service.py  router_service.py  rrf_service.py  self_rag_service.py  splitter_service.py
app/services/cache/: cache_manager.py  embedding_cache.py  metrics.py  response_cache.py  retrieval_cache.py
app/services/sql/: prompts.py  schema_service.py  sql_agent.py  sql_executor.py  sql_generator.py  sql_validator.py
database/: postgres.py  qdrant.py  redis.py
rag/: chat.py
rag/prompts/: rag_prompt.py
rag/retrieval/: context.py  dense.py  fusion.py  hybrid.py  retriever.py  sparse.py  test_r.py
scripts/: sc.py  test_repo.py
